--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 			<p>Please download the handout for your platform (Mac should work on Linux, but is not tested).</p>
             <!-- Hi! -->
 			<p>
-				<a href="https://joshuahiler.github.com/HandoutPC.zip">Handout for PC</a>
+				<a href="https://joshuahiler.github.io/HandoutPC.zip">Handout for PC</a>
 				
 			</p>
 			<p>
-				<a href="https://joshuahiler.github.com/HandoutLinux.zip">Handout for Mac</a>
+				<a href="https://joshuahiler.github.io/HandoutLinux.zip">Handout for Mac</a>
 			</p>
 		</div>
 	</body>
